[project]
name = "pywx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.62",
    "av>=15.1.0",
    "dataset>=1.6.2",
    "faster-whisper>=1.2.0",
    "flask>=3.1.2",
    "geopy>=2.4.1",
    "google-api-python-client>=2.181.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "openai>=1.107.2",
    "pyowm>=3.5.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "simplekml>=1.3.6",
    "sqlalchemy>=1.4.54",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "flake8>=7.3.0",
    "ipdb>=0.13.13",
    "ipython>=9.5.0",
    "pylint>=3.3.8",
]
